crates/zhuye-cli/src/tui_core/keymap_setup/snapshots/zhuye_cli__tui_core__keymap_setup__tests__keymap_debug_view_initial.snap
---
source: crates/reflect-tui/src/tui_core/keymap_setup/tests.rs
expression: "render_debug(&view, 80)"
---
Keypress Inspector
Press any key to see what Reflect receives. Esc is inspected; Ctrl+C closes.
Tip: Reflect can only inspect keys your terminal sends.

Waiting for a keypress...
